--- a/pyproject.toml
+++ b/pyproject.toml
@@ -372,7 +372,7 @@ commands = [
         "--keep-going",
         "--show-traceback",
         "docs/",
-        "docs/_build/html",
+        "docs/_build/html/",
     ],
 ]
 description = "Build documentation and API through Sphinx"
@@ -383,30 +383,31 @@ base = []
 commands = [
     [
         "sphinx-autobuild",
-        "--builder=dirhtml",
-        "--ignore=docs/api",
-        "--open-browser",
         "--port=0",
-        "--re-ignore='.*/__pycache__/.*'",
-        "--re-ignore='.*/.ipynb_checkpoints/.*'",
-        "--re-ignore='.*/.virtual_documents/.*'",
-        "--re-ignore='.*\\.csv'",
-        "--re-ignore='.*\\.gif'",
-        "--re-ignore='.*\\.gitignore'",
-        "--re-ignore='.*\\.gv'",
-        "--re-ignore='.*\\.inv'",
-        "--re-ignore='.*\\.json'",
-        "--re-ignore='.*\\.pickle'",
-        "--re-ignore='.*\\.png'",
-        "--re-ignore='.*\\.svg'",
-        "--re-ignore='.*\\.ya?ml'",
-        "--re-ignore='docs/_build/.*'",
-        "--watch",
-        "docs",
-        "--watch",
-        "src",
+        "--re-ignore=/__pycache__(/.*)?$",
+        "--re-ignore=/_build(/.*)?$",
+        "--re-ignore=/\\.cache(/.*)?$",
+        "--re-ignore=/\\.egg-info(/.*)?$",
+        "--re-ignore=/\\.ipynb_checkpoints(/.*)?$",
+        "--re-ignore=/\\.virtual_documents(/.*)?$",
+        "--re-ignore=/api(/.*)?$",
+        "--re-ignore=/docs$",
+        "--re-ignore=/version\\.py$",
+        "--re-ignore=\\.csv$",
+        "--re-ignore=\\.egg-info(/.*)?$",
+        "--re-ignore=\\.gif$",
+        "--re-ignore=\\.gitignore$",
+        "--re-ignore=\\.gv$",
+        "--re-ignore=\\.inv$",
+        "--re-ignore=\\.json$",
+        "--re-ignore=\\.pickle$",
+        "--re-ignore=\\.pkl$",
+        "--re-ignore=\\.png$",
+        "--re-ignore=\\.svg$",
+        "--re-ignore=\\.ya?ml$",
+        "--watch=src",
         "docs/",
-        "docs/_build/html",
+        "docs/_build/html/",
     ],
 ]
 description = "Set up a server to directly preview changes to the HTML pages"
@@ -435,7 +436,7 @@ commands = [
         "--builder=linkcheck",
         "--show-traceback",
         "docs/",
-        "docs/_build/linkcheck",
+        "docs/_build/linkcheck/",
     ],
 ]
 description = "Check external links in the documentation (requires internet connection)"
